[workspace]

[features]
parallel = ["ndarray-parallel", "rayon"]

[dependencies]
csv = "1.0.2"
rand = { version = "0.7", features = ["small_rng"] }
num = "0.2.0"
ndarray = "0.12.0"
bencher = "0.1.5"
ndarray-parallel = {version = "0.9.0", optional = true}
rayon = {version = "1.0.3", optional = true}

[lib]
name = "rkm"
path = "src/lib.rs"

[[bin]]
name = "rkm_example"
path = "src/example.rs"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false

# Use for debugging to work around https://github.com/rust-lang/cargo/issues/6301
# [profile.bench]
# opt-level = 0
# debug = 2
# debug-assertions = true
# overflow-checks = true
