[package]
name = "rkm"
version = "0.8.1"
authors = ["Nick Sarten <gen.battle@gmail.com>"]
description = "A generic k-means implementation"
repository = "https://github.com/genbattle/rkm"
readme = "README.md"
license = "MIT"
keywords = ["kmeans", "k-means", "means", "cluster", "clustering"]
categories = ["algorithms", "science"]
exclude = ["data/*"]

[features]
parallel = ["ndarray-parallel", "rayon"]

[dependencies]
csv = "*"
rand = { version = "*", features =["small_rng"]}
num = "*"
ndarray = "0.13.1"
bencher = "*"
ndarray-parallel = {version = "*", optional = true}
rayon = {version = "*", optional = true}

[lib]
name = "rkm"
path = "src/lib.rs"

[[bin]]
name = "rkm_example"
path = "src/example.rs"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false