[package]
name = "rkm"
version = "0.8.1"
authors = ["Nick Sarten <gen.battle@gmail.com>"]
description = "A generic k-means implementation"
repository = "https://github.com/genbattle/rkm"
readme = "README.md"
license = "MIT"
keywords = ["kmeans", "k-means", "means", "cluster", "clustering"]
categories = ["algorithms", "science"]
exclude = ["data/*"]
edition = "2018"

[features]
parallel = ["ndarray-parallel", "rayon"]

[dependencies]
csv = "*"
rand = { version = "0.8", features = ["small_rng"] }
rand_pcg = "0.3"
num = "*"
ndarray = ">=0.16,<0.18"
bencher = "*"
ndarray-parallel = { version = "*", optional = true }
rayon = { version = "*", optional = true }

[lib]
name = "rkm"
path = "src/lib.rs"

[[bin]]
name = "rkm_example"
path = "src/example.rs"

[[bench]]
name = "bench"
path = "rkm/benches/bench.rs"
harness = false
